// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`meta list should match snapshot (default) 1`] = `
<div
  className="c-note-list--meta"
>
  <div
    className="c-note-list__head"
  >
    <h3>
      Meta
    </h3>
    <button
      className="c-note-list__button qa-refresh-list"
      onClick={[Function]}
    >
      <i
        className="fas fa-sync"
      />
    </button>
  </div>
  <hr />
  <div
    className="c-note-list__body"
  >
    <p
      className="u-margin-none"
    >
      No notifications
    </p>
  </div>
</div>
`;

exports[`meta list should match snapshot (list) 1`] = `
<div
  className="c-note-list--meta"
>
  <div
    className="c-note-list__head"
  >
    <h3>
      Meta
    </h3>
    <button
      className="c-note-list__button qa-refresh-list"
      onClick={[Function]}
    >
      <i
        className="fas fa-sync"
      />
    </button>
  </div>
  <hr />
  <div
    className="c-note-list__body"
  >
    <div
      key=""
    />
  </div>
</div>
`;
